Исправление тега sub

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -14,8 +14,9 @@
             <p><span th:text="${a}"/>x<sup>2</sup>+<span th:text="${b}"/>x+<span th:text="${c}"/>=0</p>
             <p th:text="${d}" />
             <p>Результат:</p>
-            <p th:text="${result1}" />
-            <p th:text="${result2}" />
+            <p th:text="${result0}" />
+            <p><a th:text="${x}"/><sub th:text="${one}"/><a th:text="${equals}"/><a th:text="${result1}"/></p>
+            <p><a th:text="${x}"/><sub th:text="${two}"/><a th:text="${equals}"/><a th:text="${result2}"/></p>
             <p th:text="${result3}" />
         </div>
     </fieldset>
