--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,16 +8,14 @@
 <form method="post">
     <h1 style="text-align: center">Решение квадратных уравнений</h1>
     <fieldset>
+        <small style="text-align: right" th:inline="text" >[[${#httpServletRequest.remoteUser}]]
+            <a href="/logout">Выйти</a></small>
         <div>
             <p><span>a</span>x<sup>2</sup>+<span>b</span>x+<span>c</span>=0</p>
             <label>a=<input type="number" step="any" name="a" required="required"></label> <br /> <br />
             <label>b=<input type="number" step="any" name="b" required="required"></label> <br /> <br />
             <label>c=<input type="number" step="any" name="c" required="required"></label> <br /> <br />
-            <label>
-                <input type="checkbox" name="d" value="yes"/>
-                Показать дискриминант
-            </label> <br /><br />
-            <button style="text-align: center" type="submit" name="send">Решение</button>
+            <button style="text-align: center" type="submit" name="send">Решить</button>
         </div>
     </fieldset>
 </form>
